Actually start the game loop

--- a/www/index.hbs
+++ b/www/index.hbs
@@ -11,6 +11,7 @@
         let lobbyEl = document.getElementById('count');
         let canvasEl = document.getElementById('game-canvas');
         metro.setup('ws://{{ websocket }}', statusEl, lobbyEl, canvasEl);
+        metro.start();
       }
     </script>
   </head>
