Use display to hide the canvas for now

--- a/www/index.hbs
+++ b/www/index.hbs
@@ -18,7 +18,7 @@
   <body>
     <h2>{{ test }}</h2>
     <div id='status'>?</div>
-    <canvas id='game-canvas' width='510' height='667'> </canvas>
+    <canvas id='game-canvas' width='510' height='667' style="display:none"> </canvas>
     <b>Lobby: </b>
     <span id='count'>?</span>
     <button onclick="clicky('works');">Button</button>
